--- a/themes/cactus/layouts/partials/social.html
+++ b/themes/cactus/layouts/partials/social.html
@@ -1,5 +1,5 @@
 {{ $iconStyle := .Site.Params.socialIconStyle }}
-<div id="social">
+<div id="social" style="margin-top: 0.5em;">
     {{ range $key, $val := .Site.Social }}
     <a class="symbol" href="{{$val}}" target="_blank">
         {{ $iconStyle }}{{ $key }}
