--- a/themes/cactus/layouts/partials/head.html
+++ b/themes/cactus/layouts/partials/head.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="{{ with .Site.Params.name }}{{ . }}{{ end }}">
 		<meta name="description" content="{{ with .Site.Params.description }}{{ . }}{{ end }}">
 		{{ .Hugo.Generator }}
-		<title>{{ .Title }} &middot; {{ .Site.Title }}</title>
+		<title>{{ .Title }} &middot;</title>
 		<link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico">
 		<link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
 		<link rel="stylesheet" href="{{ .Site.BaseURL }}css/highlight.css">
