--- a/blog/themes/cactus/layouts/partials/profile.html
+++ b/blog/themes/cactus/layouts/partials/profile.html
@@ -4,7 +4,7 @@
             <img id="avatar" class="2x" src="{{ .Site.BaseURL }}images/avatar.png"/>
             <h1>{{ .Site.Params.name }}</h1>
             <h2>{{ .Site.Params.bio | markdownify }}</h2>
-            <a href="//stackoverflow.com/users/2425365/activatedgeek">
+            <a target="_blank" href="//stackoverflow.com/users/2425365/activatedgeek">
               <img
                 src="//stackoverflow.com/users/flair/2425365.png?theme=clean"
                 style="margin-top:1em;width:40%;border:solid rgba(0,0,0,0.1) 1px"
@@ -14,6 +14,13 @@
             {{ if .Site.Social }}
               {{ partial "social.html" . }}
             {{ end }}
+            <a target="_blank" href="//github.com/activatedgeek/website">
+              <img
+                src="//travis-ci.org/activatedgeek/website.svg?branch=master"
+                style="margin-top:0.8em;height:1.2em;"
+                alt="Build Status"
+              >
+            </a>
         </header>
     </section>
 </div>
