--- a/blog/themes/cactus/layouts/partials/nav.html
+++ b/blog/themes/cactus/layouts/partials/nav.html
@@ -8,7 +8,7 @@
 		<a href='{{ .Site.BaseURL }}about'>{{ with .Site.Params.about }}{{ . }}{{ else }}About{{ end }}</a>
 	{{ end }}
 
-	<a target='_blank' href='https://docs.google.com/viewer?url=https://github.com/activatedgeek/website/releases/download/{{ .Site.Params.version }}/CV.pdf'>CV</a>
+	<a target='_blank' href='/cv'>CV</a>
 
 	{{ if .Site.Params.enableRSS }}
 	<a class="cta" href="{{ .Site.RSSLink }}">{{ with .Site.Params.subscribe }}{{ . }}{{ else }}Subscribe{{ end }}</a>
