--- a/themes/goa/layouts/partials/header.html
+++ b/themes/goa/layouts/partials/header.html
@@ -16,7 +16,7 @@
 
 {{ .Hugo.Generator }}
 
-{{ if .RSSlink }}
+{{ if .RSSLink }}
   <link href="{{ . }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
   <link href="{{ . }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
