--- a/themes/goa/layouts/partials/footer.html
+++ b/themes/goa/layouts/partials/footer.html
@@ -4,7 +4,7 @@
 
 {{ with .Site.Params.extra }}
 {{ if .highlightJS }}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js" async></script>
 <script type="text/javascript">
 hljs.initHighlightingOnLoad();
 </script>
@@ -12,8 +12,9 @@ hljs.initHighlightingOnLoad();
 {{ end }}
 
 {{ template "_internal/google_analytics_async.html" . }}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML" async></script>
 <script src="js/main.js"></script>
 </body>
 </html>
