--- a/themes/goa/layouts/partials/social.html
+++ b/themes/goa/layouts/partials/social.html
@@ -8,6 +8,9 @@
   {{ with .Site.Params.social.hackernews }}
   <a target="_blank" href="https://news.ycombinator.com/user?id={{.}}"><i class="fa fa-hacker-news" aria-hidden="true"></i></a>
   {{ end }}
+  {{ with .Site.Params.social.quora }}
+  <a target="_blank" href="https://www.quora.com/profile/{{.}}"><i class="fa fa-quora" aria-hidden="true"></i></a>
+  {{ end }}
   {{ with .Site.Params.social.angellist }}
   <a target="_blank" href="https://angel.co/{{.}}"><i class="fa fa-angellist" aria-hidden="true"></i></a>
   {{ end }}
