--- a/themes/goa/layouts/partials/sub_footer.html
+++ b/themes/goa/layouts/partials/sub_footer.html
@@ -8,6 +8,14 @@
       alt="Build Status"
     >
   </a>
+  <br />
+  <a target="_blank" href="//www.netlify.com">
+    <img
+      src="https://www.netlify.com/img/global/badges/netlify-color-bg.svg"
+      style="margin-top:0.5em;height:2em;"
+      alt="Build Status"
+    />
+  </a>
   {{ end }}
   {{ with .Site.Params.extra }}
   <h6 class="text-center copyright">
