Add facebook comments to all single layout

--- a/layouts/partials/fbcomments.html
+++ b/layouts/partials/fbcomments.html
@@ -9,4 +9,4 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="fb-comments" data-href="{{ .Page.URL }}" data-width="100%" data-numposts="5"></div>
+<div class="fb-comments" data-href="{{ .Site.BaseURL}}{{ .Page.URL }}" data-width="100%" data-numposts="5"></div>
