--- a/themes/goa/layouts/partials/sub_footer.html
+++ b/themes/goa/layouts/partials/sub_footer.html
@@ -22,7 +22,7 @@
     {{ .copyright | markdownify }}
   </h6>
   {{ if ne .poweredBy false }}
-  <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo</a> &amp; <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.</h6>
+  <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo</a> &amp; based on <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.</h6>
   {{ end }}
   {{ end }}
 </footer>
