Fix twitter card type

--- a/themes/goa/layouts/partials/header_meta.html
+++ b/themes/goa/layouts/partials/header_meta.html
@@ -19,7 +19,7 @@
 <meta property="og:description" content="{{ .Page.Description }}">
 <meta property="og:image" content="{{ .Page.Params.og_image }}">
 
-<meta name="twitter:card" content="summary">
+<meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:creator" content="@{{ .Site.Params.Social.Twitter }}">
 <meta name="twitter:url" content="{{ .Page.Permalink }}">
 <meta name="twitter:title" content="{{ .Page.Title }}">
