--- a/themes/goa/layouts/partials/header.html
+++ b/themes/goa/layouts/partials/header.html
@@ -12,7 +12,11 @@
 <link href="{{ . }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
 
-<title>{{ .Site.Title }} | {{ .Page.Title | singularize | humanize | title }}</title>
+{{ if .Page.IsHome }}
+<title>{{ .Site.Title }} </title>
+{{ else }}
+<title>{{ .Page.Title | singularize | humanize | title }} | {{ .Site.Title }} </title>
+{{ end }}
 
 {{ partial "header_meta.html" . }}
 
