--- a/themes/goa/layouts/partials/content.html
+++ b/themes/goa/layouts/partials/content.html
@@ -1,5 +1,6 @@
 <header class="row text-left title">
   <h1 class="title">{{ .Title }}</h1>
+  <p class="excerpt">{{ .Description }}</p>
 </header>
 <section id="category-pane" class="row meta">
   {{ if ne .Params.showpagemeta false }}
