--- a/themes/goa/layouts/partials/li.html
+++ b/themes/goa/layouts/partials/li.html
@@ -6,12 +6,14 @@
       <p class="meta">
         {{ .Date.Format .Site.Params.dateFormat | upper }} | {{ .ReadingTime }} MIN READ
         <span class="category">
+        {{ if .Params.categories }}
         {{ $total := len .Params.categories }}
         {{ if gt $total 0 }}
         —
         {{ $total := sub $total 1 }}
         {{ range $i, $cat := sort .Params.categories }}
         <a class="category" href="{{ "/categories/" | relURL }}{{ $cat | humanize | urlize }}">{{ $cat | upper }}</a>{{ if lt $i $total }}, {{ end }}
+        {{ end }}
         {{ end }}
         {{ end }}
         </span>
