--- a/themes/goa/layouts/partials/main_menu.html
+++ b/themes/goa/layouts/partials/main_menu.html
@@ -1,5 +1,5 @@
 <section id="main-menu-pane" class="row text-center main-menu">
-  {{ range sort .Site.Menus.main }}
-  <h4><a class="menu-item" href="{{ .URL }}">{{ .Name | lower }}</a></h4>
+  {{ range .Site.Params.menu }}
+  <h4><a class="menu-item" href="{{ .url }}">{{ .name }}</a></h4>
   {{ end }}
 </section>
