--- a/themes/even/layouts/partials/footer.html
+++ b/themes/even/layouts/partials/footer.html
@@ -50,3 +50,4 @@
     <span class="author">{{if .Site.Copyright }}{{ .Site.Copyright | safeHTML }}{{ else }}{{ .Site.Author.name | safeHTML }}{{ end }}</span>
   </span>
 </div>
+{{ partial "sub_footer.html" . }}
