--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -1,10 +1,8 @@
-<footer class="row text-center footer">
-  <hr style="margin-bottom:5px;"/>
-  {{ with .Site.Params.travisRepo }}
+<footer style="display: flex; align-items: center; width: 100%; justify-content: center;">
   <a target="_blank" href="//github.com/{{.}}">
     <img
-      src="//travis-ci.org/{{.}}.svg?branch=master"
-      style="height:1em;display:inline;"
+      src="//travis-ci.org/activatedgeek/website.svg?branch=master"
+      style="height:1em;display:inline;margin: 0.5em;"
       alt="Build Status"
     >
   </a>
@@ -12,14 +10,8 @@
   <a target="_blank" href="//www.netlify.com">
     <img
       src="https://www.netlify.com/img/global/badges/netlify-color-bg.svg"
-      style="margin-top:0.5em;height:2em;"
+      style="margin:0.5em;height:2em;"
       alt="Build Status"
     />
   </a>
-  {{ end }}
-  {{ with .Site.Params.extra }}
-  {{ if ne .poweredBy false }}
-  <h6 class="text-center powered">Powered by <a href="https://gohugo.io/">Hugo</a> &amp; based on <a href="https://github.com/shenoybr/hugo-goa">Goa</a>.</h6>
-  {{ end }}
-  {{ end }}
 </footer>
