--- a/themes/even/layouts/_default/summary.html
+++ b/themes/even/layouts/_default/summary.html
@@ -19,7 +19,7 @@
   <!-- Content -->
   <div class="post-content">
     <div class="post-summary">
-      {{ .Summary }}
+      {{ .Description }}
     </div>
     <div class="read-more">
       <a href="{{ .URL }}" class="read-more-link">{{ T "readMore" }}</a>
