--- a/themes/even/layouts/index.html
+++ b/themes/even/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "content" }}
   <section id="posts" class="posts">
     {{/* (index .Site.Paginate) */}}
-    {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+    {{ $paginator := .Paginator 5 }}
     {{ range $paginator.Pages }}
       {{ .Render "summary" }}
     {{ end }}
