Fix links and targets

--- a/layouts/partials/sub_footer.html
+++ b/layouts/partials/sub_footer.html
@@ -1,5 +1,5 @@
 <footer style="display: flex; align-items: center; width: 100%; justify-content: center;">
-  <a target="_blank" href="//github.com/{{.}}">
+  <a target="_blank" href="//github.com/activatedgeek/website">
     <img
       src="//travis-ci.org/activatedgeek/website.svg?branch=master"
       style="height:1em;display:inline;margin: 0.5em;"
