--- a/themes/even/src/css/_partial/_header.scss
+++ b/themes/even/src/css/_partial/_header.scss
@@ -4,7 +4,10 @@
 
 .header {
   @include clearfix; 
-  padding: $header-padding;
+  padding: $header-padding 0;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
 
   @import '_header/logo';
   @import '_header/menu';
