--- a/themes/even/src/css/_partial/_post/_header.scss
+++ b/themes/even/src/css/_partial/_post/_header.scss
@@ -42,5 +42,19 @@
       }
     }
 
+    .post-tags {
+      padding: $post-tags-padding;
+
+      a {
+        margin-right: 5px;
+        color: $theme-color;
+        word-break: break-all;
+
+        &::before {
+          content: '#';
+        }
+      }
+    }
+
   }
 }
